# geodb-rs

./: .gitignore  Cargo.toml  README.md  deny.toml  release.toml  taplo.toml
.github/workflows/: ci.yml  pypi.yml  wasm-build.yml
crates/geodb-cli/: Cargo.toml
crates/geodb-cli/src/: args.rs  lib.rs  main.rs
crates/geodb-core/: Cargo.toml
crates/geodb-core/benches/: benchmarks.rs
crates/geodb-core/src/: alias.rs  api.rs  common.rs  error.rs  lib.rs  loader.rs  model.rs  prelude.rs  raw.rs  search.rs  text.rs  traits.rs
crates/geodb-core/src/common/: mod.rs
crates/geodb-core/src/legacy_model/: alias.rs  api.rs  convert.rs  filter.rs  loader.rs  mod.rs  model.rs  nested.rs  prelude.rs  region.rs  search.rs  traits.rs
crates/geodb-core/src/loader/: binary_load.rs  builder.rs  common_io.rs  legacy_json.rs  mod.rs  standard.rs
crates/geodb-core/src/model/: convert.rs  flat.rs  load.rs  mod.rs  nested.rs  search.rs
crates/geodb-py/: Cargo.toml  example.py  geodb_rs_data  pyproject.toml
crates/geodb-py/src/: lib.rs
crates/geodb-wasm/: Cargo.toml  index.html
crates/geodb-wasm/src/: lib.rs
crates/geodb-wasm/tests/: smoke.rs
examples/: advanced_filtering.rs  basic_usage.rs  error_handling.rs
scripts/: test-ci-locally.sh
wasm_bench/: bench.html
wasm_bench/dist-flat/: index.html
wasm_bench/dist-nested/: geodb-wasm-cb9827d45371b32f.js  index.html
