[workspace]
members = [
    "crates/geodb-core",
    "crates/geodb-wasm",
#    "crates/geodb-cli",
]

resolver = "2"

[workspace.dependencies]
bincode = "1"
flate2 = { version = "1" }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }