[workspace]
members = ["crates/geodb-core", "crates/geodb-wasm"]

resolver = "2"

[workspace.dependencies]
bincode = "1"
flate2 = { version = "1" }
js-sys = "0.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
thiserror = "1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
