[package]
name = "geodb-cli"
version = "0.1.2"
edition = "2021"
description = "Command-line interface for the geodb-core geographic database."
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/holg/geodb-rs"
homepage = "https://github.com/holg/geodb-rs"
categories = ["command-line-utilities", "database"]
keywords = ["geodb", "geo", "countries", "regions", "cities"]
publish = true

# Configure docs.rs build so the crate gets a proper documentation page
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "geodb_cli"
path = "src/lib.rs"

[[bin]]
name = "geodb-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
geodb-core = { version = "0.1", path = "../geodb-core" }
