[package]
name = "geodb-cli"
version = "0.1.3"
edition = "2021"
description = "Command-line interface for the geodb-core geographic database."
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/holg/geodb-rs"
homepage = "https://github.com/holg/geodb-rs"
categories = ["command-line-utilities", "database"]
keywords = ["geodb", "geo", "countries", "regions", "cities"]
publish = true

[[bin]]
name = "geodb-cli"
path = "src/main.rs"

# -----------------------------------------------------------------------------
# Feature Flags (The Control Panel)
# -----------------------------------------------------------------------------
[features]
# Default: Build the "New Standard" (Flat + Compact + Builder tools)
default = ["builder", "compact", "json"]

# Architecture Switch:
# Enable this to compile the CLI against the Legacy Nested engine.
legacy_model = ["geodb-core/legacy_model"]

# Pass-through flags
builder = ["geodb-core/builder"]
compact = ["geodb-core/compact"]
json = ["geodb-core/json"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

# Core Dependency:
# 1. default-features = false (We want full control)
# 2. features = [] (We assume features are enabled via [features] block above or defaults)
# Note: 'builder' is required for the CLI's build command logic to work.
geodb-core = { version = "0.1", path = "../geodb-core", default-features = false }