[package]
edition = "2021"
license = "MIT"
name = "geodb-wasm"
version = "0.1.0"
[package.metadata.trunk]

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = { workspace = true }
console_error_panic_hook = "0.1"
geodb-core = { path = "../geodb-core" }
js-sys = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
